# build-recorder

./: .gitignore  CI_CD_SUMMARY.md  Makefile.am  README.md  build-recorder.spec  configure.ac
.github/workflows/: ci.yml  packages.yml  release.yml
debian/: changelog  control  copyright  rules
src/: Makefile.am  compat.h  hash.c  main.c  pid_hash.c  pid_hash.h  record.c  record.h  schema.c  tracer.c  types.h
